name: wolf-api
version: 0.0.0.0
cabal-version: >=1.10
build-type: Simple
license: AllRightsReserved
license-file: LICENSE
copyright: Copyright: (c) 2017 Tom Sydney Kerckhove
maintainer: syd.kerckhove@gmail.com
homepage: http://cs-syd.eu
category: CsSyd
author: Tom Sydney Kerckhove

library
    exposed-modules:
        Wolf.API
    build-depends:
        base >=4.9 && <=5,
        aeson >=1.0 && <1.1,
        bytestring >=0.10 && <0.11,
        containers >=0.5 && <0.6,
        mtl >=2.2 && <2.3,
        path >=0.5 && <0.6,
        path-io >=1.2 && <1.3,
        servant >=0.9 && <0.10,
        text >=1.2 && <1.3,
        validity >=0.3 && <0.4,
        validity-containers >=0.1 && <0.2,
        validity-text >=0.1 && <0.2,
        validity-time >=0.0 && <0.1,
        wolf-data >=0.0 && <0.1
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude
    hs-source-dirs: src/
    other-modules:
        Import
    ghc-options: -Wall

