name: wolf-api
version: 0.0.0.0
cabal-version: >=1.10
build-type: Simple
license: AllRightsReserved
license-file: LICENSE
copyright: Copyright: (c) 2017 Tom Sydney Kerckhove
maintainer: syd.kerckhove@gmail.com
homepage: http://cs-syd.eu
category: CsSyd
author: Tom Sydney Kerckhove

library
    exposed-modules:
        Wolf.API
    build-depends:
        base >=4.9 && <=5,
        aeson >=1.0 && <1.1,
        bytestring >=0.10 && <0.11,
        containers >=0.5 && <0.6,
        mtl >=2.2 && <2.3,
        path >=0.5 && <0.6,
        path-io >=1.2 && <1.3,
        servant >=0.9 && <0.10,
        text >=1.2 && <1.3,
        validity >=0.3 && <0.4,
        validity-bytestring >=0.1 && <0.2,
        validity-containers >=0.1 && <0.2,
        validity-text >=0.1 && <0.2,
        validity-time >=0.0 && <0.1,
        wolf-data >=0.0 && <0.1
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude
    hs-source-dirs: src/
    other-modules:
        Import
    ghc-options: -Wall

test-suite wolf-api-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base >=4.9 && <=5,
        QuickCheck -any,
        bytestring -any,
        containers -any,
        genvalidity -any,
        genvalidity-containers -any,
        genvalidity-hspec -any,
        genvalidity-hspec-aeson -any,
        genvalidity-text -any,
        genvalidity-time -any,
        hspec -any,
        http-client >=0.5 && <0.6,
        mtl -any,
        path -any,
        path-io -any,
        servant -any,
        text -any,
        wai -any,
        warp -any,
        wolf-api -any,
        wolf-test-utils -any,
        wolf-data -any
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude
    hs-source-dirs: test/
    other-modules:
        TestImport
        Wolf.API.Gen
        Wolf.APISpec
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
