name: wolf-client
version: 0.0.0.0
cabal-version: >=1.10
build-type: Simple
license: AllRightsReserved
license-file: LICENSE
copyright: Copyright: (c) 2017 Tom Sydney Kerckhove
maintainer: syd.kerckhove@gmail.com
homepage: http://cs-syd.eu
category: CsSyd
author: Tom Sydney Kerckhove

library
    exposed-modules:
        Wolf.Client
    build-depends:
        base >=4.9 && <=5,
        servant >=0.9 && <0.10,
        servant-client >=0.9 && <0.10,
        text >=1.2 && <1.3,
        wolf-api >=0.0 && <0.1,
        wolf-data >=0.0 && <0.1
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude
    hs-source-dirs: src/
    ghc-options: -Wall

