name: wolf-cub
version: 0.0.0.0
cabal-version: >=1.10
build-type: Simple
license: AllRightsReserved
license-file: LICENSE
copyright: Copyright: (c) 2017 Tom Sydney Kerckhove
maintainer: syd.kerckhove@gmail.com
homepage: http://cs-syd.eu
category: CsSyd
author: Tom Sydney Kerckhove

library
    exposed-modules:
        Wolf.Cub
        Wolf.Cub.Types
        Wolf.Cub.OptParse
        Wolf.Cub.OptParse.Types
    build-depends:
        base >=4.9 && <=5,
        wolf-cli -any,
        wolf-data -any,
        mtl -any,
        optparse-applicative -any
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude
    hs-source-dirs: src/
    other-modules:
        Import
    ghc-options: -Wall

executable cub
    main-is: Main.hs
    build-depends:
        base >=4.9 && <=5,
        wolf-cub -any
    default-language: Haskell2010
    hs-source-dirs: app/
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

