name: wolf-cub
version: 0.0.0.0
cabal-version: >=1.10
build-type: Simple
license: AllRightsReserved
license-file: LICENSE
copyright: Copyright: (c) 2017 Tom Sydney Kerckhove
maintainer: syd.kerckhove@gmail.com
homepage: http://cs-syd.eu
category: CsSyd
author: Tom Sydney Kerckhove

library
    exposed-modules:
        Wolf.Cub
        Wolf.Cub.Draw
        Wolf.Cub.Handle
        Wolf.Cub.OptParse
        Wolf.Cub.OptParse.Types
        Wolf.Cub.PropertyEditor
        Wolf.Cub.PropertyEditor.Cursor
        Wolf.Cub.Types
    build-depends:
        base >=4.9 && <=5,
        brick >=0.24 && <0.25,
        mtl -any,
        optparse-applicative -any,
        safe >=0.3 && <0.4,
        text >=1.2 && <1.3,
        time >=1.6 && <1.7,
        vector >=0.11 && <0.12,
        vty >=5.15 && <5.16,
        wolf-cli -any,
        wolf-data -any
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude
    hs-source-dirs: src/
    other-modules:
        Import
    ghc-options: -Wall

executable cub
    main-is: Main.hs
    build-depends:
        base >=4.9 && <=5,
        wolf-cub -any
    default-language: Haskell2010
    hs-source-dirs: app/
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

