name: wolf-data
version: 0.0.0.0
cabal-version: >=1.10
build-type: Simple
license: AllRightsReserved
license-file: LICENSE
copyright: Copyright: (c) 2017 Tom Sydney Kerckhove
maintainer: syd.kerckhove@gmail.com
homepage: http://cs-syd.eu
category: People
author: Tom Sydney Kerckhove

library
    exposed-modules:
        Wolf.Data
        Wolf.Data.Entry
        Wolf.Data.Entry.Types
        Wolf.Data.Git
        Wolf.Data.Index
        Wolf.Data.Index.Types
        Wolf.Data.Init
        Wolf.Data.Init.Types
        Wolf.Data.JSONUtils
        Wolf.Data.Note
        Wolf.Data.Note.Types
        Wolf.Data.NoteIndex
        Wolf.Data.NoteIndex.Types
        Wolf.Data.Path
        Wolf.Data.People
        Wolf.Data.People.Types
        Wolf.Data.Suggestion
        Wolf.Data.Suggestion.Types
        Wolf.Data.Time
        Wolf.Data.Types
    build-depends:
        base >=4.9 && <=5,
        aeson >=1.0 && <1.1,
        aeson-pretty >=0.8 && <0.9,
        bytestring >=0.10 && <0.11,
        conduit >=1.2 && <1.3,
        containers >=0.5 && <0.6,
        deepseq >=1.4 && <1.5,
        exceptions >=0.8 && <0.9,
        filepath >=1.4 && <1.5,
        mtl >=2.2 && <2.3,
        path >=0.5 && <0.6,
        path-io >=1.2 && <1.3,
        process >=1.4 && <1.5,
        resourcet >=1.1 && <1.2,
        servant-server >=0.9 && <0.10,
        text >=1.2 && <1.3,
        time >=1.6 && <1.7,
        unordered-containers >=0.2 && <0.3,
        uuid >=1.3 && <1.4,
        validity >=0.3 && <0.4,
        validity-containers >=0.1 && <0.2,
        validity-path >=0.1 && <0.2,
        validity-text >=0.1 && <0.2,
        validity-time >=0.0 && <0.1,
        yaml >=0.8 && <0.9
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude
    hs-source-dirs: src/
    other-modules:
        Import
    ghc-options: -Wall

