name: wolf-google
version: 0.0.0.0
cabal-version: >=1.10
build-type: Simple
license: AllRightsReserved
license-file: LICENSE
copyright: Copyright: (c) 2017 Tom Sydney Kerckhove
maintainer: syd.kerckhove@gmail.com
homepage: http://cs-syd.eu
category: CsSyd
author: Tom Sydney Kerckhove

library
    exposed-modules:
        Import
        Wolf.Google
        Wolf.Google.OptParse
        Wolf.Google.OptParse.Types
        Wolf.Google.Suggest
        Wolf.Google.Types
    build-depends:
        base >=4.9 && <=5,
        aeson >=1.0 && <1.1,
        aeson-pretty >=0.8 && <0.9,
        bytestring >=0.10 && <0.11,
        containers >=0.5 && <0.6,
        exceptions >=0.8 && <0.9,
        gogol >=0.3 && <0.4,
        gogol-people >=0.3 && <0.4,
        http-client >=0.5 && <0.6,
        microlens >=0.4 && <0.5,
        optparse-applicative >=0.13,
        process >=1.4 && <1.5,
        text >=1.2 && <1.3,
        vector >=0.11 && <0.12
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude
    hs-source-dirs: src/
    ghc-options: -Wall

executable wolf-google
    main-is: Main.hs
    build-depends:
        base >=4.9 && <=5,
        wolf-google -any
    default-language: Haskell2010
    hs-source-dirs: app/
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

test-suite wolf-google-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base >=4.9 && <=5,
        wolf-google -any,
        hspec -any
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude
    hs-source-dirs: test/
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
