name: wolf-server
version: 0.0.0.0
cabal-version: >=1.10
build-type: Simple
license: AllRightsReserved
license-file: LICENSE
copyright: Copyright: (c) 2017 Tom Sydney Kerckhove
maintainer: syd.kerckhove@gmail.com
homepage: http://cs-syd.eu
category: CsSyd
author: Tom Sydney Kerckhove

library
    exposed-modules:
        Wolf.Server
        Wolf.Server.AccountServer
        Wolf.Server.Accounts
        Wolf.Server.OptParse
        Wolf.Server.OptParse.Types
        Wolf.Server.Path
        Wolf.Server.PersonServer
        Wolf.Server.Serve
        Wolf.Server.Types
        Wolf.Server.Utils
    build-depends:
        base >=4.9 && <=5,
        bytestring >=0.10 && <0.11,
        containers >=0.5 && <0.6,
        mtl >=2.2 && <2.3,
        optparse-applicative >=0.13,
        path >=0.5 && <0.6,
        path-io >=1.2 && <1.3,
        servant >=0.9 && <0.10,
        servant-server >=0.9 && <0.10,
        text >=1.2 && <1.3,
        unordered-containers >=0.2 && <0.3,
        uuid >=1.3 && <1.4,
        validity >=0.3 && <0.4,
        validity-containers >=0.1 && <0.2,
        validity-text >=0.1 && <0.2,
        validity-time >=0.0 && <0.1,
        wai >=3.2 && <3.3,
        warp >=3.2 && <3.3,
        wolf-api >=0.0 && <0.1,
        wolf-cli >=0.0 && <0.1,
        wolf-data >=0.0 && <0.1
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude
    hs-source-dirs: src/
    other-modules:
        Import
    ghc-options: -Wall

executable wolf-server
    main-is: Main.hs
    build-depends:
        base >=4.9 && <=5,
        wolf-server -any
    default-language: Haskell2010
    hs-source-dirs: app/
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

test-suite wolf-server-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base >=4.9 && <=5,
        wolf-server -any,
        QuickCheck -any,
        bytestring -any,
        containers -any,
        genvalidity -any,
        genvalidity-bytestring -any,
        genvalidity-containers -any,
        genvalidity-hspec -any,
        genvalidity-hspec-aeson -any,
        genvalidity-text -any,
        genvalidity-time -any,
        hspec -any,
        http-client >=0.5 && <0.6,
        http-types >=0.9 && <0.10,
        mtl -any,
        path -any,
        path-io -any,
        servant -any,
        servant-client -any,
        servant-server -any,
        text -any,
        wai -any,
        warp -any,
        wolf-api -any,
        wolf-client -any,
        wolf-test-utils -any,
        wolf-data -any
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude
    hs-source-dirs: test/
    other-modules:
        TestImport
        Wolf.API.Gen
        Wolf.Server.AccountServerSpec
        Wolf.Server.PersonServerSpec
        Wolf.Server.PropertiesSpec
        Wolf.Server.TestUtils
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
