name: wolf-test-utils
version: 0.0.0.0
cabal-version: >=1.10
build-type: Simple
license: AllRightsReserved
license-file: LICENSE
copyright: Copyright: (c) 2017 Tom Sydney Kerckhove
maintainer: syd.kerckhove@gmail.com
homepage: http://cs-syd.eu
category: People
author: Tom Sydney Kerckhove

library
    exposed-modules:
        Wolf.Data.Entry.Types.Gen
        Wolf.Data.Export.Types.Gen
        Wolf.Data.Index.Types.Gen
        Wolf.Data.Note.Types.Gen
        Wolf.Data.NoteIndex.Types.Gen
        Wolf.Data.People.Types.Gen
        Wolf.Data.Suggestion.Types.Gen
        Wolf.Data.TestUtils
        Wolf.Data.Types.Gen
        Wolf.Data.Init.Types.Gen
        Wolf.Data.Gen
    build-depends:
        base >=4.9 && <=5,
        QuickCheck >=2.9 && <2.10,
        aeson >=1.0 && <1.1,
        ansi-terminal >=0.6 && <0.7,
        bytestring >=0.10 && <0.11,
        containers >=0.5 && <0.6,
        genvalidity -any,
        genvalidity-bytestring -any,
        genvalidity-containers -any,
        genvalidity-hspec -any,
        genvalidity-hspec-aeson -any,
        genvalidity-text -any,
        genvalidity-time -any,
        genvalidity-path -any,
        hspec >=2.4 && <2.5,
        mtl >=2.2 && <2.3,
        path >=0.5 && <0.6,
        path-io >=1.2 && <1.3,
        servant-server >=0.9 && <0.10,
        text >=1.2 && <1.3,
        time >=1.6 && <1.7,
        unordered-containers >=0.2 && <0.3,
        uuid >=1.3 && <1.4,
        uuid-types >=1.0 && <1.1,
        validity >=0.3 && <0.4,
        validity-containers >=0.1 && <0.2,
        validity-text >=0.1 && <0.2,
        validity-time >=0.0 && <0.1,
        wolf-data >=0.0 && <0.1
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude
    hs-source-dirs: src/
    other-modules:
        Import
    ghc-options: -Wall

test-suite wolf-data-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base >=4.9 && <=5,
        QuickCheck -any,
        bytestring -any,
        containers -any,
        genvalidity -any,
        genvalidity-bytestring -any,
        genvalidity-containers -any,
        genvalidity-hspec -any,
        genvalidity-hspec-aeson -any,
        genvalidity-text -any,
        genvalidity-path -any,
        genvalidity-time -any,
        hspec -any,
        mtl -any,
        path -any,
        path-io -any,
        text -any,
        uuid-types -any,
        wolf-data -any,
        wolf-test-utils -any
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude
    hs-source-dirs: test/
    other-modules:
        TestImport
        Wolf.Data.Entry.TypesSpec
        Wolf.Data.EntrySpec
        Wolf.Data.Export.TypesSpec
        Wolf.Data.ExportSpec
        Wolf.Data.IndexSpec
        Wolf.Data.Index.TypesSpec
        Wolf.Data.Note.TypesSpec
        Wolf.Data.NoteIndex.TypesSpec
        Wolf.Data.NoteIndexSpec
        Wolf.Data.NoteSpec
        Wolf.Data.People.TypesSpec
        Wolf.Data.Suggestion.TypesSpec
        Wolf.Data.SuggestionSpec
        Wolf.Data.TypesSpec
        Wolf.Data.Init.TypesSpec
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall

benchmark wolf-data-bench
    type: exitcode-stdio-1.0
    main-is: Main.hs
    build-depends:
        base >=4.9 && <5,
        QuickCheck -any,
        criterion >=1.1 && <1.2,
        deepseq >=1.4 && <1.5,
        genvalidity -any,
        wolf-data -any,
        wolf-test-utils -any
    default-language: Haskell2010
    hs-source-dirs: bench
    ghc-options: -rtsopts -with-rtsopts=-T -with-rtsopts=-M4G -Wall