name: wolf
version: 0.0.0.0
cabal-version: >=1.10
build-type: Simple
license: AllRightsReserved
license-file: LICENSE
copyright: Copyright: (c) 2017 Tom Sydney Kerckhove
maintainer: syd.kerckhove@gmail.com
homepage: http://cs-syd.eu
category: CsSyd
author: Tom Sydney Kerckhove

library
    exposed-modules:
        Wolf
        Wolf.Types
        Import
        Wolf.OptParse
        Wolf.OptParse.Types
    build-depends:
        base >=4.9 && <=5,
        aeson >= 1.0 && < 1.1,
        aeson-pretty >= 0.8 && <0.9,
        bytestring >= 0.10 && < 0.11,
        configurator >=0.3 && <0.4,
        containers >= 0.5 && < 0.6,
        optparse-applicative >=0.13 && <0.14,
        path >= 0.5 && < 0.6,
        path-io >= 1.2 && < 1.3, 
        process >= 1.4 && < 1.5,
        text >= 1.2 && <1.3,
        uuid >= 1.3 && < 1.4
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude
    hs-source-dirs: src/
    ghc-options: -Wall

executable wolf
    main-is: Main.hs
    build-depends:
        base >=4.9 && <=5,
        wolf -any
    default-language: Haskell2010
    hs-source-dirs: app/
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

test-suite wolf-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base >=4.9 && <=5,
        wolf -any,
        hspec -any
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude
    hs-source-dirs: test/
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
