name: wolf
version: 0.0.0.0
cabal-version: >=1.10
build-type: Simple
license: AllRightsReserved
license-file: LICENSE
copyright: Copyright: (c) 2017 Tom Sydney Kerckhove
maintainer: syd.kerckhove@gmail.com
homepage: http://cs-syd.eu
category: People
author: Tom Sydney Kerckhove

library
    exposed-modules:
        Wolf
        Wolf.Alias
        Wolf.Editor
        Wolf.Entry
        Wolf.Git
        Wolf.Index
        Wolf.Init
        Wolf.JSONUtils
        Wolf.Note
        Wolf.NoteIndex
        Wolf.OptParse
        Wolf.OptParse.Types
        Wolf.Path
        Wolf.Report
        Wolf.Review
        Wolf.Summary
        Wolf.Time
        Wolf.Types
    build-depends:
        base >=4.9 && <=5,
        aeson >=1.0 && <1.1,
        aeson-pretty >=0.8 && <0.9,
        ansi-terminal >=0.6 && <0.7,
        bytestring >=0.10 && <0.11,
        configurator >=0.3 && <0.4,
        containers >=0.5 && <0.6,
        mtl >=2.2 && <2.3,
        optparse-applicative >=0.13 && <0.14,
        path >=0.5 && <0.6,
        path-io >=1.2 && <1.3,
        process >=1.4 && <1.5,
        text >=1.2 && <1.3,
        time >=1.6 && <1.7,
        validity >=0.3 && <0.4,
        validity-containers >=0.1 && <0.2,
        validity-text >=0.1 && <0.2,
        validity-time >=0.0 && <0.1,
        unordered-containers >=0.2 && <0.3,
        uuid >=1.3 && <1.4
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude
    hs-source-dirs: src/
    other-modules:
        Import
    ghc-options: -Wall

executable wolf
    main-is: Main.hs
    build-depends:
        base >=4.9 && <=5,
        wolf -any
    default-language: Haskell2010
    hs-source-dirs: app/
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

test-suite wolf-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base >=4.9 && <=5,
        wolf -any,
        QuickCheck -any,
        bytestring -any,
        containers -any,
        genvalidity -any,
        genvalidity-containers -any,
        genvalidity-time -any,
        genvalidity-text -any,
        genvalidity-hspec -any,
        genvalidity-hspec-aeson -any,
        hspec -any,
        mtl -any,
        path -any,
        path-io -any,
        text -any,
        uuid-types -any
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude
    hs-source-dirs: test/
    other-modules:
        TestImport
        TestUtils
        Wolf.EntrySpec
        Wolf.InitSpec
        Wolf.NoteSpec
        Wolf.Types.Gen
        Wolf.TypesSpec
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
